r1
--For an extended version history, please visit the github changelog.  https://github.com/nrlulz/ACF/commits/master

*r486
--New cannon and short cannon models
--Short cannons added, which trade penetration and accuracy for size and light weight
--37mm cannon added
--Large b6, v8, v12 engines buffed
--Small v12, v12 special slightly buffed
--New multifuel v6 special added
--Turbines have much more power, but now require fuel

*r487
--fixed something in cannon models

*r489
--Short-barrel cannons adjusted: gun weight decreased a bit to account for heavier shells, RoF changed slightly.

*r490
--Cannon and short-barrel cannon models are now skinnier
--CoH sounds fixed
--Small v12 petrol/diesel and medium v8 diesel weight slightly increased
--Large CVT torque rating increased from 3400 to 6000
--37mm cannon name fixed
--37mm short-barrel cannon rof adjusted

*r491
--New tank engine and misc sounds

*r492
--Resampled new sounds to 44100 hz